@@ -11,6 +11,12 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-06-00
+2013-03-24 Andy Salnikov
+- new feature: rewriting of the naes of enum constants in HDF5 schema,
+  this is needed for Encoder schema which stores enums in the forma that
+  cannot be represented in C++
+
 Tag: V00-05-18
 2013-03-22 Andy Salnikov
 - adding support for specification of the enum base type
